examples/test/testpolicy10571.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10571
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key38: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value39
          key4: value46
          key44: value35
      podSelector:
        matchLabels:
          key12: value37
          key7: value38
          key46: value8
